namespace SWE1_MTCG
{
    public enum EAreaType
    {
        ELEMENTAL
    }
}