namespace SWE1_MTCG
{
    public enum ECardType
    {
        MONSTER,
        AREA,
        TRAP,
        SERVANT,
        SPELL
    }
}