namespace SWE1_MTCG
{
    public enum EElementalAttributes
    {
        FIRE,
        WATER,
        NORMAL
    }
}