namespace SWE1_MTCG
{
    public class Goblin:MonsterCard
    {
        public Goblin(string name, double baseDamage, IElementalAttribute elementalAttribute, double armorPoints, double strength):base(name, baseDamage, elementalAttribute, armorPoints, strength)
        {
        }
    }
}