namespace SWE1_MTCG
{
    public interface IArea
    {
        ICardAction InfluenceBattle(ICardAction cardAction);
    }
}