namespace SWE1_MTCG
{
    public interface IAreaAction
    {
        IArea ConstructArea();
    }
}