CREATE TABLE MTCGUSER(
	ID SERIAL PRIMARY KEY,
	USERNAME VARCHAR(75) NOT NULL UNIQUE,
	BIO TEXT,
	PASSWORD VARCHAR(100) NOT NULL,
	COINS INT NOT NULL
);

CREATE TABLE CARD(
	ID SERIAL PRIMARY KEY,
	NAME VARCHAR(75) NOT NULL UNIQUE,
	DAMAGE DECIMAL NOT NULL,
	DESCRIPTION TEXT,
	ELEMENTALTYPE INT NOT NULL,
	CARDTYPE INT NOT NULL
);

CREATE TABLE SERVANTCARD(
	ID INT PRIMARY KEY,
	SERVANTTYPE INT NOT NULL,
	CONSTRAINT fk_servant_card FOREIGN KEY(ID) REFERENCES CARD(ID) ON DELETE CASCADE
);

CREATE TABLE TRAPCARD(
	ID INT PRIMARY KEY,
	USES INT NOT NULL,
	CONSTRAINT fk_trap_card FOREIGN KEY(ID) REFERENCES CARD(ID) ON DELETE CASCADE
);

CREATE TABLE AREACARD(
	ID INT PRIMARY KEY,
	USES INT NOT NULL,
	CONSTRAINT fk_area_card FOREIGN KEY(ID) REFERENCES CARD(ID) ON DELETE CASCADE
);

CREATE TABLE MONSTERCARD(
	ID INT PRIMARY KEY,
	MONSTERTYPE INT NOT NULL,
	CONSTRAINT fk_monster_card FOREIGN KEY(ID) REFERENCES CARD(ID) ON DELETE CASCADE
);

CREATE TABLE SPELLCARD(
	ID INT PRIMARY KEY,
	CONSTRAINT fk_spell_card FOREIGN KEY(ID) REFERENCES CARD(ID) ON DELETE CASCADE
);

CREATE TABLE CARDDECK(
	ID SERIAL PRIMARY KEY,
	USERID INT NOT NULL,
	CARDID INT NOT NULL,
	CONSTRAINT fk_carddeck_mtcguser FOREIGN KEY(USERID) REFERENCES MTCGUSER(ID) ON DELETE CASCADE,
	CONSTRAINT fk_carddeck_card FOREIGN KEY(CARDID) REFERENCES CARD(ID) ON DELETE CASCADE
);

CREATE TABLE CARDSTACK(
	ID SERIAL PRIMARY KEY,
	USERID INT NOT NULL,
	CARDID INT NOT NULL,
	CONSTRAINT fk_cardstack_mtcguser FOREIGN KEY(USERID) REFERENCES MTCGUSER(ID) ON DELETE CASCADE,
	CONSTRAINT fk_cardstack_card FOREIGN KEY(CARDID) REFERENCES CARD(ID) ON DELETE CASCADE
);


CREATE TABLE CURRENTSESSIONS(
	ID INT PRIMARY KEY,
	LOGINTIME TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
	CONSTRAINT fk_session_mtcguser FOREIGN KEY(ID) REFERENCES MTCGUSER(ID) ON DELETE CASCADE
);

CREATE TABLE BATTLEHISTORY(
	ID SERIAL PRIMARY KEY,
	USERID INT NOT NULL,
	BATTLERESULT VARCHAR(10) NOT NULL,
	POINTCHANGE INT NOT NULL,
	CONSTRAINT fk_battlehistory_mtcguser FOREIGN KEY(USERID) REFERENCES MTCGUSER(ID) ON DELETE CASCADE
);

CREATE TABLE USERSTATS(
	ID INT PRIMARY KEY,
	POINTS INT NOT NULL,
	WINLOSERATIO DECIMAL NOT NULL,
	CONSTRAINT fk_userstats_mtcguser FOREIGN KEY(ID) REFERENCES MTCGUSER(ID) ON DELETE CASCADE
);

CREATE TABLE TRADINGDEAL(
	ID SERIAL PRIMARY KEY,
	CARDID INT NOT NULL,
	USERID INT NOT NULL,
	REQUIREDCOINS INT NOT NULL,
	MINDAMAGE INT NOT NULL,
	TRADINGDEALTYPE INT NOT NULL,
	CONSTRAINT fk_tradingdeal_mtcguser FOREIGN KEY(USERID) REFERENCES MTCGUSER(ID) ON DELETE CASCADE,
	CONSTRAINT fk_tradingdeal_card FOREIGN KEY(CARDID) REFERENCES CARD(ID) ON DELETE CASCADE
);

CREATE TABLE PACKAGE(
	ID SERIAL PRIMARY KEY
);

CREATE TABLE PACKAGECARDS(
	ID SERIAL PRIMARY KEY, 
	PACKAGEID INT NOT NULL,
	CARDID INT NOT NULL,
	CONSTRAINT fk_packagecards_package FOREIGN KEY(PACKAGEID) REFERENCES PACKAGE(ID) ON DELETE CASCADE,
	CONSTRAINT fk_packagecards_card FOREIGN KEY(CARDID) REFERENCES CARD(ID) ON DELETE CASCADE
);
